[gd_scene load_steps=6 format=2]

[ext_resource path="res://interface/Hud/MenuPause/MenuPause.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/Hud/Hud.gd" type="Script" id=2]
[ext_resource path="res://interface/Hud/PanelPlayerData/DataPanelPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/Hud/MenuFinish/MenuFinish.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/Hud/MenuGameOver/MenuGameover.tscn" type="PackedScene" id=5]

[node name="Hud" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="DataPanelPlayer" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MenuPause" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MenuGameOver" parent="." instance=ExtResource( 5 )]
visible = false

[node name="MenuFinish" parent="." instance=ExtResource( 4 )]
visible = false
is_active = false
